<resources>
    <string name="app_name">QuizApp</string>
    <string name="trueb">True</string>
    <string name="falseb">False</string>
    <string name="previousb">Previous</string>
    <string name="nextb">Next</string>
    <string name="text">text</string>
    <string-array name="array">
        <item>How old are you?</item>
        <item>Whats your name?</item>
        <item>Tortoise</item>
        <item>levator labii superioris alaeque nasi</item>
    </string-array>
    <integer-array name="answers">
        <item>1</item>
        <item>0</item>
        <item>0</item>
        <item>1</item>
    </integer-array>
</resources>
